# KittenTTS-WEBUI

./: .env.example  .gitignore  .goreleaser.yaml  Dockerfile  KittenTTS-WEBUI.py  README.md  pyproject.toml
.config/: goreleaser.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/kittentts_webui/: __main__.py  build.py
static/: index.html  script.js  style.css
tests/: test_webui.py
